TAG: qcreports_db-4-4-2-5
DATE: 11/22/2011
STAFF: lec
CHANGES:
1) added -f to *.csh, Configuration.default

TAG: qcreports_db-4-4-2-4
DATE: 11/14/2011
STAFF: lec
CHANGES:
1) TR10901/GXD_Stats.py/J:177549 EuReGene

TAG: qcreports_db-4-4-2-3
DATE: 10/27/2011
STAFF: lec
CHANGES:
1) MRK_McvAnnotByFeature.py: convert to ansi standard inner/out join

TAG: qcreports_db-4-4-2-2
DATE: 10/12/2011
STAFF: lec
CHANGES:
1) TR10877/GXD_ExpPresNotPres.py

TAG: qcreports_db-4-4-2-1
DATE: 10/11/2011
STAFF: lec
CHANGES:
TR8302/TreeFam obsolete
1) MRK_NomenNotInformative.sql;removed section with TreeFam

TAG: qcreports_db-4-4-1-38
DATE: 10/05/2011
STAFF: sc
CHANGES: TR10822
1) ALL_NewAllele.py - added columns to the report
2) qcr.html - added link to allele report archive next to ALL_NewAllele.rpt

TAG: qcreports_db-4-4-1-37
DATE: 10/03/2011
STAFF: dbm
CHANGES:
1) PHENO_Images.py - Exclude records with no PubMed ID because the null
                     value causes the report to fail

TAG: qcreports_db-4-4-1-36
DATE: 09/26/2011
STAFF: sc
CHANGES:
1) TR10866 - MRK_NoVEGA.rpt - include gene model when no raw biotype
	also did MRK_NoENSEMBL.rpt because it includes raw biotype

TAG: qcreports_db-4-4-1-35
TAG: qcreports_db-4-4-1-34
DATE: 09/08/2011
STAFF: lec
CHANGES:
1) TR10837/weekly/PHENO_Images.py

TAG: qcreports_db-4-4-1-33
DATE: 09/08/2011
STAFF: lec
CHANGES:
1) dbradt changed to jrecla

TAG: qcreports_db-4-4-1-32
DATE: 08/29/2011
STAFF: lec
CHANGES:
1) MRK_AllNoGO.py

TAG: qcreports_db-4-4-1-31
DATE: 08/25/2011
STAFF: lec
CHANGES:
1) TR10823/weekly/PHENO_ImageCheck.sql
2) TR10778/mgd/GXD_DupGenotype.py
3) TR10822/weekly/ALL_NewAlleles.py

TAG: qcreports_db-4-4-1-30
DATE: 08/22/2011
STAFF: lec
CHANGES:
1) TR10813/MRK_GOIEA.py
2) replace 're' with 'string'
3) TR10816/MGI_GenoNoMarker.sql

TAG: qcreports_db-4-4-1-29
DATE: 08/03/2011
STAFF: lec
CHANGES: qcr.html
1) TR10801/MRK_NoNCBI.py

TAG: not tagged
DATE: 07/21/2011
STAFF: lec
CHANGES: qcr.html