@@ -101,9 +101,9 @@ db.sql('create index mrkAlleleIndex on #mrkAlleles (_Marker_key)', None)
 
 db.sql('''select m._Marker_key, count(vmc._Term_key) as 'hasOmim'
 	into #mrkOmimAnnot
-	from VOC_Marker_Cache vmc, #validMarkers m
-	where m._Marker_key *= vmc._Marker_key
-	and annotType = 'OMIM/Genotype'
+	from #validMarkers m
+	     LEFT OUTER JOIN VOC_Marker_Cache vmc on (m._Marker_key = vmc._Marker_key
+	         and annotType = 'OMIM/Genotype')
 	group by m._Marker_key''', None)
 
 db.sql('create index mrkOmimIndex on #mrkOmimAnnot (_Marker_key)', None)
